
= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/abcrypt
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/abcrypt-cli-v0.3.1\...abcrypt-cli-v0.3.2[0.3.2] - 2024-04-17

=== Changed

* Change to remove unnecessary files from the book
  ({pull-request-url}/382[#382])

== {compare-url}/abcrypt-cli-v0.3.0\...abcrypt-cli-v0.3.1[0.3.1] - 2024-04-16

=== Added

* Add man page for the format specification ({pull-request-url}/369[#369])

=== Changed

* Update examples in man pages

== {compare-url}/abcrypt-cli-v0.2.12\...abcrypt-cli-v0.3.0[0.3.0] - 2024-02-18

=== Changed

* Bump MSRV to 1.74.0 ({pull-request-url}/272[#272])
* Rename Argon2 parameters ({pull-request-url}/275[#275])
* Rename `--memory-size` to `--memory-cost` ({pull-request-url}/275[#275])
* Rename `--iterations` to `--time-cost` ({pull-request-url}/275[#275])

== {compare-url}/abcrypt-cli-v0.2.11\...abcrypt-cli-v0.2.12[0.2.12] - 2024-01-21

=== Changed

* Add description about behavior of `-h`, `--help` and `--version` in man pages
  ({pull-request-url}/234[#234])

== {compare-url}/abcrypt-cli-v0.2.10\...abcrypt-cli-v0.2.11[0.2.11] - 2024-01-18

=== Changed

* Remove last blank line of `--version` ({pull-request-url}/225[#225])

== {compare-url}/abcrypt-cli-v0.2.9\...abcrypt-cli-v0.2.10[0.2.10] - 2024-01-07

=== Changed

* Reduce the target architecture and the archive format for pre-built binaries
  ({pull-request-url}/189[#189])

== {compare-url}/abcrypt-cli-v0.2.8\...abcrypt-cli-v0.2.9[0.2.9] - 2023-12-22

=== Changed

* Update screenshot ({pull-request-url}/178[#178])

== {compare-url}/abcrypt-cli-v0.2.7\...abcrypt-cli-v0.2.8[0.2.8] - 2023-12-20

=== Added
