@@ -14,6 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/abcrypt-cli-v0.3.2\...HEAD[Unreleased]
+
+=== Changed
+
+* Change `--passphrase-from-env` to take an UTF-8 string as an environment
+  variable key ({pull-request-url}/531[#531])
+
 == {compare-url}/abcrypt-cli-v0.3.1\...abcrypt-cli-v0.3.2[0.3.2] - 2024-04-17
 
 === Changed
